gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-stmt_expr_attributes.rs
const X: i32 = #[allow(dead_code)] 8;
// { dg-error ".E0658." "" { target *-*-* } .-1 }

fn main() {}

